# chip8-interpreter

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  chip8.c  chip8.h  main.c  ui.c  ui.h
src/chip8/: chip8.c  chip8.h
src/chip8/stack/: stack.c  stack.h
src/ui/: ui.c  ui.h
src/utils/: utils.c  utils.h
